--- a/stylesheets/_column.scss
+++ b/stylesheets/_column.scss
@@ -4,6 +4,8 @@
   justify-content: center;
   padding: 25px;
   background-color: #fdede4;
+  position: relative;
+  z-index: -1;
 
   @include mq() {
     padding: 40px;
