--- a/stylesheets/_mv.scss
+++ b/stylesheets/_mv.scss
@@ -1,6 +1,8 @@
 .mv {
   padding: 20px 0;
   background-color: #fdede4;
+  position: relative;
+  z-index: -1;
 
   @include mq() {
     padding: 40px 0;
@@ -20,7 +22,6 @@
       background-image: url("img/frame.png");
       background-size: cover;
       background-repeat: no-repeat;
-      z-index: 1;
     }
 
     @include mq() {
